--- a/PROJETO_REDUZIDO/src/pages/Home/Home.module.css
+++ b/PROJETO_REDUZIDO/src/pages/Home/Home.module.css
@@ -1,16 +1,4 @@
 .container {
+  text-align: center;
   padding: 2rem;
-  background-color: #e6f2ff;
-  border-radius: 8px;
-}
-
-.title {
-  font-size: 2rem;
-  color: #0056b3;
-  margin-bottom: 1rem;
-}
-
-.text {
-  font-size: 1.1rem;
-  color: #333;
 }
