--- a/PROJETO_REDUZIDO/src/pages/AtualizarPerfil/AtualizarPerfil.module.css
+++ b/PROJETO_REDUZIDO/src/pages/AtualizarPerfil/AtualizarPerfil.module.css
@@ -1,4 +1,4 @@
-.loginContainer {
+.atualizarContainer {
   max-width: 400px;
   margin: 50px auto;
   padding: 20px;
@@ -15,11 +15,6 @@ h2 {
 
 .inputGroup {
   margin-bottom: 15px;
-}
-
-.label {
-  font-size: 14px;
-  font-weight: bold;
 }
 
 .input {
@@ -43,9 +38,4 @@ h2 {
 
 .submitButton:hover {
   background-color: #0056b3;
-}
-
-.errorMessage {
-  color: red;
-  text-align: center;
 }
