--- a/PROJETO_REDUZIDO/src/pages/perfil/Perfil.module.css
+++ b/PROJETO_REDUZIDO/src/pages/perfil/Perfil.module.css
@@ -1,30 +1,22 @@
 .perfilContainer {
-  font-family: Arial, sans-serif;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  max-width: 500px;
-  margin: 0 auto;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 25px;
+  background-color: var(--white);
+  width: 400px;
+  margin: 40px auto;
+  border-radius: 12px;
+  border-left: 5px solid var(--verde-primary);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
 
 .perfilTitulo {
-  font-size: 2rem;
-  color: #333;
+  text-align: center;
+  font-size: 1.8rem;
+  color: var(--verde-primary);
   margin-bottom: 20px;
 }
 
 .infoUsuario {
   font-size: 1.2rem;
-  color: #555;
+  color: var(--text-medium);
   margin-bottom: 10px;
-}
-
-.infoUsuario strong {
-  font-weight: bold;
-}
-
-.carregando {
-  font-size: 1.2rem;
-  color: #888;
 }
