--- a/PROJETO_REDUZIDO/src/index.css
+++ b/PROJETO_REDUZIDO/src/index.css
@@ -39,3 +39,14 @@ button {
 button:hover {
   background-color: #43a047;
 }
+
+body {
+  padding-bottom:160px;
+  background-color: var(--verde-soft);
+  font-family: 'Roboto', sans-serif;
+}
+.consultar-container, .listar-container, .cardapio-container {
+  max-width: 1000px;
+  margin: 25px auto;
+}
+
