--- a/PROJETO_REDUZIDO/src/App.css
+++ b/PROJETO_REDUZIDO/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+footer {
+  background-color: #2e7d32;
+  color: white;
+  text-align: center;
+  padding: 15px 0;
+  width: 100%;
+  font-size: 14px;
+  margin-top: 20px;
+}
